name: failure
version: 0.0.0
Cabal-Version:  >= 1.6
build-type: Simple
license: PublicDomain
author: Pepe Iborra, Michael Snoyman, Nicolas Pouillard
maintainer: pepeiborra@gmail.com
homepage: http://github.com/snoyberg/failure
description: Typeclass for representing failures
synopsis: Typeclass for representing failures
category: Control, Monads, Failure
stability: stable

Library
  buildable: True
  build-depends: base >= 4 && < 5
  ghc-options: -Wall

  exposed-modules:
     Control.Failure

source-repository head
  type:     git
  location: git://github.com/snoyberg/failure.git
